--- a/src/app/component/taches/taches.component.html
+++ b/src/app/component/taches/taches.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid d-flex justify-content-center">
+<div>
     <div class="d-flex flex-column">
         <div class="bd-highlight d-flex justify-content-center">
             <h1>Taches</h1>
             <button class="btn btn-outline-secondary m-1" (click)="loggout()">Logout</button>
 
         </div>
-        <div class="d-flex flex-row justify-content-space-around">
+        <div class="d-flex flex-row" style="justify-content: space-evenly;">
             <div>
                 <h1>Undefined</h1>
                 <div class="d-flex flex-row justify-content-center ">
@@ -16,11 +16,15 @@
                         (click)='ajouterUndefined()'>Ajouter</button>
                 </div>
                 <div class="d-flex  justify-content-center">
-                    <div id="listeTachesUndefined" class="d-flex  flex-column">
-                        <div class="d-flex justify-content-between m-1"
-                            *ngFor="let tache of (Undefined | filtreTache:filter)">
+                    <div id="listeTachesUndefined" class="d-flex  flex-column" cdkDropList
+                    #listUndefined="cdkDropList"
+                    [cdkDropListData]="Undefined"
+                    [cdkDropListConnectedTo]="[listEnAttente, listEnCours, listTermine]"
+                    (cdkDropListDropped)="drop($event)">
+                        <div class="d-flex justify-content-between m-1" style="align-items: center;"
+                            *ngFor="let tache of (Undefined | filtreTache:filter)" cdkDrag>
                             <input (click)="modifier(tache)" type="checkbox" [(ngModel)]="tache.termine">
-                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' ">{{tache.titre}}</div>
+                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' " style="padding: 0 10px;">{{tache.titre}}</div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'>Supprimer</button>
                         </div>
                     </div>
@@ -37,11 +41,15 @@
                         (click)='ajouterEnAttente()'>Ajouter</button>
                 </div>
                 <div class="d-flex  justify-content-center">
-                    <div id="listeTachesEnAttente" class="d-flex  flex-column">
-                        <div class="d-flex justify-content-between m-1"
-                            *ngFor="let tache of (EnAttente | filtreTache:filter)">
+                    <div id="listeTachesEnAttente" class="d-flex  flex-column" cdkDropList
+                    #listEnAttente="cdkDropList"
+                    [cdkDropListData]="EnAttente"
+                    [cdkDropListConnectedTo]="[listUndefined, listEnCours, listTermine]"
+                    (cdkDropListDropped)="drop($event)">
+                        <div class="d-flex justify-content-between m-1" style="align-items: center;"
+                            *ngFor="let tache of (EnAttente | filtreTache:filter)" cdkDrag>
                             <input (click)="modifier(tache)" type="checkbox" [(ngModel)]="tache.termine">
-                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' ">{{tache.titre}}</div>
+                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' " style="padding: 0 10px;">{{tache.titre}}</div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'>Supprimer</button>
                         </div>
                     </div>
@@ -58,11 +66,15 @@
                         (click)='ajouterEnCours()'>Ajouter</button>
                 </div>
                 <div class="d-flex  justify-content-center">
-                    <div id="listeTachesEnCours" class="d-flex  flex-column">
-                        <div class="d-flex justify-content-between m-1"
-                            *ngFor="let tache of (EnCours | filtreTache:filter)">
+                    <div id="listeTachesEnCours" class="d-flex  flex-column" cdkDropList
+                    #listEnCours="cdkDropList"
+                    [cdkDropListData]="EnCours"
+                    [cdkDropListConnectedTo]="[listUndefined, listEnAttente, listTermine]"
+                    (cdkDropListDropped)="drop($event)">
+                        <div class="d-flex justify-content-between m-1" style="align-items: center;"
+                            *ngFor="let tache of (EnCours | filtreTache:filter)" cdkDrag>
                             <input (click)="modifier(tache)" type="checkbox" [(ngModel)]="tache.termine">
-                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' ">{{tache.titre}}</div>
+                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' " style="padding: 0 10px;">{{tache.titre}}</div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'>Supprimer</button>
                         </div>
                     </div>
@@ -79,22 +91,20 @@
                         (click)='ajouterTermine()'>Ajouter</button>
                 </div>
                 <div class="d-flex  justify-content-center">
-                    <div id="listeTachesTermine" class="d-flex  flex-column">
-                        <div class="d-flex justify-content-between m-1"
-                            *ngFor="let tache of (Termine | filtreTache:filter)">
+                    <div id="listeTachesTermine" class="d-flex  flex-column" cdkDropList
+                    #listTermine="cdkDropList"
+                    [cdkDropListData]="Termine"
+                    [cdkDropListConnectedTo]="[listUndefined, listEnAttente, listEnCours]"
+                    (cdkDropListDropped)="drop($event)">
+                        <div class="d-flex justify-content-between m-1" style="align-items: center;"
+                            *ngFor="let tache of (Termine | filtreTache:filter)" cdkDrag>
                             <input (click)="modifier(tache)" type="checkbox" [(ngModel)]="tache.termine">
-                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' ">{{tache.titre}}</div>
+                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' " style="padding: 0 10px;">{{tache.titre}}</div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'>Supprimer</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- <div class="d-flex flex-row justify-content-center">
-            <button class="btn btn-outline-secondary m-1" (click)="change('Tous')">Tous</button>
-            <button class="btn btn-outline-secondary m-1" (click)="change('Actif')">Actif</button>
-            <button class="btn btn-outline-secondary m-1" (click)="change('Termine')">Terminé</button>
-        </div> -->
     </div>
 </div>
