--- a/src/app/component/taches/taches.component.html
+++ b/src/app/component/taches/taches.component.html
@@ -23,10 +23,14 @@
                     (cdkDropListDropped)="drop($event)">
                         <div class="d-flex justify-content-between m-1" style="align-items: center;"
                             *ngFor="let tache of (Undefined | filtreTache:filter)" cdkDrag>
+                           
                             <input (click)="modifier(tache)" type="checkbox" [(ngModel)]="tache.termine">
                             <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' " style="padding: 0 10px;">{{tache.titre}}</div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'>Supprimer</button>
+                            
+
                         </div>
+                        <div style=" opacity: 0;">saveeeeeeeeeeeeeeeeee</div>
                     </div>
                 </div>
             </div>
@@ -52,6 +56,7 @@
                             <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' " style="padding: 0 10px;">{{tache.titre}}</div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'>Supprimer</button>
                         </div>
+                        <div style=" opacity: 0;">saveeeeeeeeeeeeeeeeee</div>
                     </div>
                 </div>
             </div>
@@ -77,6 +82,7 @@
                             <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' " style="padding: 0 10px;">{{tache.titre}}</div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'>Supprimer</button>
                         </div>
+                        <div style=" opacity: 0;">saveeeeeeeeeeeeeeeeee</div>
                     </div>
                 </div>
             </div>
@@ -102,6 +108,7 @@
                             <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' " style="padding: 0 10px;">{{tache.titre}}</div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'>Supprimer</button>
                         </div>
+                        <div style=" opacity: 0;">saveeeeeeeeeeeeeeeeee</div>
                     </div>
                 </div>
             </div>
