--- a/src/app/component/taches/taches.component.html
+++ b/src/app/component/taches/taches.component.html
@@ -13,10 +13,10 @@
                         [(ngModel)]="newTacheUndefined.titre">
 
                     <button id="buttonAjoutTacheUndefined" class="btn btn-primary" value="Ajouter"
-                        (click)='ajouterUndefined()'>Ajouter</button>
+                        (click)='ajouter("Undefined")'>Ajouter</button>
                 </div>
                 <div class="d-flex  justify-content-center">
-                    <div id="listeTachesUndefined" class="d-flex  flex-column" cdkDropList
+                    <div id="Undefined" class="d-flex  flex-column" cdkDropList
                     #listUndefined="cdkDropList"
                     [cdkDropListData]="Undefined"
                     [cdkDropListConnectedTo]="[listEnAttente, listEnCours, listTermine]"
@@ -42,10 +42,10 @@
                         [(ngModel)]="newTacheEnAttente.titre">
 
                     <button id="buttonAjoutTacheEnAttente" class="btn btn-primary" value="Ajouter"
-                        (click)='ajouterEnAttente()'>Ajouter</button>
+                        (click)='ajouter("EnAttente")'>Ajouter</button>
                 </div>
                 <div class="d-flex  justify-content-center">
-                    <div id="listeTachesEnAttente" class="d-flex  flex-column" cdkDropList
+                    <div id="En Attente" class="d-flex  flex-column" cdkDropList
                     #listEnAttente="cdkDropList"
                     [cdkDropListData]="EnAttente"
                     [cdkDropListConnectedTo]="[listUndefined, listEnCours, listTermine]"
@@ -68,10 +68,10 @@
                         [(ngModel)]="newTacheEnCours.titre">
 
                     <button id="buttonAjoutTacheEnCours" class="btn btn-primary" value="Ajouter"
-                        (click)='ajouterEnCours()'>Ajouter</button>
+                        (click)='ajouter("EnCours")'>Ajouter</button>
                 </div>
                 <div class="d-flex  justify-content-center">
-                    <div id="listeTachesEnCours" class="d-flex  flex-column" cdkDropList
+                    <div id="En Cours" class="d-flex  flex-column" cdkDropList
                     #listEnCours="cdkDropList"
                     [cdkDropListData]="EnCours"
                     [cdkDropListConnectedTo]="[listUndefined, listEnAttente, listTermine]"
@@ -94,10 +94,10 @@
                         [(ngModel)]="newTacheTermine.titre">
 
                     <button id="buttonAjoutTacheTermine" class="btn btn-primary" value="Ajouter"
-                        (click)='ajouterTermine()'>Ajouter</button>
+                        (click)='ajouter("Termine")'>Ajouter</button>
                 </div>
                 <div class="d-flex  justify-content-center">
-                    <div id="listeTachesTermine" class="d-flex  flex-column" cdkDropList
+                    <div id="Termine" class="d-flex  flex-column" cdkDropList
                     #listTermine="cdkDropList"
                     [cdkDropListData]="Termine"
                     [cdkDropListConnectedTo]="[listUndefined, listEnAttente, listEnCours]"
