--- a/src/app/component/taches/taches.component.html
+++ b/src/app/component/taches/taches.component.html
@@ -3,29 +3,43 @@
         <div class="bd-highlight d-flex justify-content-center">
             <h1>Taches</h1>
             <button class="btn btn-outline-secondary m-1" (click)="loggout()">Logout</button>
-
         </div>
         <div class="d-flex flex-row justify-content-center ">
             <input id="nomListe" class="saisieInput" type="text" name="liste" placeholder="liste"
                 [(ngModel)]="newListe.titre">
 
-            <button id="ajouterListe" class="btn btn-primary" value="Ajouter" (click)='ajouterListe()'>Ajout
+            <button id="buttonAjouterListe" class="btn btn-primary" value="Ajouter" (click)='ajouterListe()'>Ajout
                 Liste</button>
         </div>
-        <div class="d-flex flex-row justify-content-between m-1" *ngFor="let liste of listes">
-            <div class="d-flex flex-column justify-content-between m-1">
-                <h1>{{liste.titre}}</h1>
-                <button class="btn btn-outline-danger m-1" (click)='supprimerListe(liste)'>Supprimer</button> 
-                <div class="d-flex flex-row justify-content-center ">
-                    <!-- <input id="inputAjoutTacheUndefined" class="saisieInput" type="text" name="tache" placeholder="tache"
-                        [(ngModel)]="newTacheUndefined.titre">
+        <div class="d-flex flex-row justify-content-around align-items-baseline">
+            <div class="d-flex flex-row justify-content-between" *ngFor="let liste of listes, let i = index">
+                <div class="d-flex flex-column justify-content-center">
+                    <h1>{{liste.titre}}</h1>
+                    <button class="btn btn-outline-danger m-1" (click)='supprimerListe(liste)'>Supprimer</button>
+                    <div class="d-flex flex-column justify-content-center ">
+                        <input id="inputAjoutTache" class="saisieInput" type="text" name="tache" placeholder="tache"
+                            [(ngModel)]="newTache.titre">
 
-                    <button id="buttonAjoutTacheUndefined" class="btn btn-primary" value="Ajouter"
-                        (click)='ajouter("Undefined")'>Ajouter</button> -->
+                        <button id="buttonAjoutTache" class="btn btn-primary" value="Ajouter"
+                            (click)='ajouterTache(liste.titre)'>Ajouter</button>
+                        <div class="d-flex flex-row justify-content-between" style="align-items: center;"
+                            *ngFor="let tache of (taches | filtreTache:filter)" cdkDrag>
+
+                            <input (click)="modifier(tache)" type="checkbox" [(ngModel)]="tache.termine"
+                                *ngIf="tache.statut===liste.titre">
+                            <div [ngClass]="tache.termine? 'text-decoration-line-through' : '' "
+                                style="padding: 0 10px;" *ngIf="tache.statut===liste.titre">{{tache.titre}}</div>
+                            <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)'
+                                *ngIf="tache.statut===liste.titre">Supprimer</button>
+                        </div>
+
+                    </div>
+                    <div *ngIf="taches.length === 0">Liste vide</div>
                 </div>
             </div>
         </div>
-        <!-- <div class="d-flex flex-row" style="justify-content: space-evenly;">
+    </div>
+    <!-- <div class="d-flex flex-row" style="justify-content: space-evenly;">
             <div>
                 <h1>Undefined</h1>
                 <div class="d-flex flex-row justify-content-center ">
@@ -133,5 +147,4 @@
                 </div>
             </div>
         </div> -->
-    </div>
 </div>
