--- a/src/app/component/taches/taches.component.html
+++ b/src/app/component/taches/taches.component.html
@@ -34,7 +34,7 @@
                             </div>
                             <button class="btn btn-outline-danger m-1" (click)='supprimer(tache)' *ngIf="tache.statut===liste.titre">Supprimer</button>
                         </div>
-                        <div style="opacity: 50;">z</div>
+                        <div *ngIf="listeLength(taches, liste) === 0" style="opacity: 33; display: flex; justify-content: center; align-items: center; min-height: 50px">Liste vide</div>
                         </div>
                     </div>
                 </div>
