--- a/src/app/component/signin/signin.component.html
+++ b/src/app/component/signin/signin.component.html
@@ -7,35 +7,34 @@
 
                         <div class="mb-md-5 mt-md-4 pb-5">
                             <div *ngIf="error" class="alert alert-danger">
-                                Erreur lors de la tentative d'authentification
+                                Erreur lors de la tentative d'enregistrement
                             </div>
-                            <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                            <p class="text-white-50 mb-5">Entrez votre nom d'utilisateur et votre mot de passe</p>
+                            <h2 class="fw-bold mb-2 text-uppercase">Signin</h2>
+                            <p class="text-white-50 mb-5">Enregistrez votre nom d'utilisateur et votre mot de passe</p>
 
                             <div class="form-outline form-white mb-4">
-                                <input type="text" id="typeEmailX" class="form-control form-control-lg" [(ngModel)]="user.login" />
+                                <input type="text" id="typeEmailX" class="form-control form-control-lg"
+                                    [(ngModel)]="user.login" />
                             </div>
 
                             <div class="form-outline form-white mb-4">
-                                <input type="password" id="typePasswordX" class="form-control form-control-lg" [(ngModel)]="user.password" />
+                                <input type="password" id="typePasswordX" class="form-control form-control-lg"
+                                    [(ngModel)]="user.password" />
                             </div>
 
-                            <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Mot de passe oublié?</a></p>
-
-                            <button class="btn btn-outline-light btn-lg px-5" type="submit" (click)='submit()'>Login</button>
-
+                            <button class="btn btn-outline-light btn-lg px-5" type="submit"
+                                (click)='submit()'>Signin</button>
                             <div class="d-flex justify-content-center text-center mt-4 pt-1">
                                 <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
                                 <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
                                 <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
                             </div>
+                            <div>
+                                <p class="mb-0">Vous avez un compte ? <a href="http://localhost:4200"
+                                        class="text-white-50 fw-bold">Connectez-vous</a>
+                                </p>
+                            </div>
                         </div>
-
-                        <div>
-                            <p class="mb-0">Vous n'avez pas de compte ? <a href="http://localhost:4200/signin" class="text-white-50 fw-bold">Enregistrez-vous</a>
-                            </p>
-                        </div>
-
                     </div>
                 </div>
             </div>
